Validation for entity parameters added