@@ -4,12 +4,14 @@ import com.jdnt.perficient.training.DTO.CourseDTO;
 import com.jdnt.perficient.training.DTO.StudentDTO;
 import com.jdnt.perficient.training.entity.Course;
 import com.jdnt.perficient.training.entity.Student;
+import com.jdnt.perficient.training.entity.User;
 import com.jdnt.perficient.training.exception.UserNotCreatedException;
 import com.jdnt.perficient.training.exception.UserNotDeletedException;
 import com.jdnt.perficient.training.exception.UserNotFoundException;
 import com.jdnt.perficient.training.exception.UserNotUpdatedException;
 import com.jdnt.perficient.training.repository.CourseRepository;
 import com.jdnt.perficient.training.repository.StudentRepository;
+import com.jdnt.perficient.training.repository.UserRepository;
 import com.jdnt.perficient.training.service.CourseService;
 import com.jdnt.perficient.training.service.StudentService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,7 +19,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class StudentServiceImpl implements StudentService {
@@ -28,6 +30,8 @@ public class StudentServiceImpl implements StudentService {
     CourseRepository courseRepository;
     @Autowired
     CourseService courseService;
+    @Autowired
+    UserRepository userRepository;
 
     public StudentDTO convertStudentToDTO(Student student) {
 
@@ -36,56 +40,53 @@ public class StudentServiceImpl implements StudentService {
         studentDTO.setLastName(student.getLastName());
         studentDTO.setUsername(student.getUsername());
         studentDTO.setEmail(student.getEmail());
-        studentDTO.setCourseName(student.getCourse().getName());
+
+        if (student.getCourse()!=null)
+            studentDTO.setCourseName(student.getCourse().getName());
 
         return studentDTO;
     }
 
     public CourseDTO getCourse(Long id) {
-        if(studentRepository.existsById(id)){
-            return courseService.convertCourseToDTO(
-                    studentRepository.findById(id).get().getCourse()
-            );
-        }
-        throw new UserNotFoundException(id);
+        return courseService.convertCourseToDTO(
+                studentRepository.findById(id)
+                        .orElseThrow(() -> new UserNotFoundException(id))
+                        .getCourse()
+        );
     }
 
     public CourseDTO updateCourse(Long studentId, Long courseId){
-        if(studentRepository.existsById(studentId) && courseRepository.existsById(courseId) ){
-            Student student = studentRepository.findById(studentId).get();
-            Course course = courseRepository.findById(courseId).get();
+        Student student = studentRepository.findById(studentId).orElseThrow(() -> new UserNotFoundException(studentId));
+        Course course = courseRepository.findById(courseId).orElseThrow(() -> new UserNotFoundException(courseId));
 
-            student.setCourse(course);
+        student.setCourse(course);
 
-            if(course.getStudentsEnrolled()!=null){
-                course.getStudentsEnrolled().add(student);
-            }else {
-                course.setStudentsEnrolled(new HashSet<Student>());
-                course.getStudentsEnrolled().add(student);
-            }
-
-            studentRepository.save(student);
-            courseRepository.save(course);
-
-            return courseService.convertCourseToDTO(
-                    student.getCourse()
-            );
+        if(course.getStudentsEnrolled()!=null){
+            course.getStudentsEnrolled().add(student);
+        }else {
+            course.setStudentsEnrolled(new HashSet<>());
+            course.getStudentsEnrolled().add(student);
         }
-        throw new UserNotUpdatedException(studentId);
+
+        studentRepository.save(student);
+        courseRepository.save(course);
+
+        return courseService.convertCourseToDTO(
+                student.getCourse()
+        );
     }
 
     public String deleteCourse(Long studentId) {
-        if(studentRepository.existsById(studentId)){
-            studentRepository.findById(studentId).get().setCourse(null);
-            return "User deleted";
-        }
-        throw new UserNotDeletedException(studentId);
+        studentRepository.findById(studentId)
+                .orElseThrow(() -> new UserNotFoundException(studentId))
+                .setCourse(null);
+        return "User deleted";
     }
 
     public List<StudentDTO> getStudents() {
         return studentRepository.findAll()
                 .stream().map(this::convertStudentToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public StudentDTO getStudentById(Long id) {
@@ -97,16 +98,24 @@ public class StudentServiceImpl implements StudentService {
 
     public StudentDTO createStudent(Student newUser) {
         if(newUser!=null){
-            return convertStudentToDTO(
-                    studentRepository.save(newUser)
-            );
+
+            long repited = userRepository.findAll().stream()
+                    .filter(user -> user.getEmail().equals(newUser.getEmail())).count();
+
+            if(repited==0){
+                return convertStudentToDTO(
+                        studentRepository.save(newUser)
+                );
+            }
+            throw new UserNotCreatedException("email already taken");
         }
-        throw new UserNotCreatedException();
+        throw new UserNotCreatedException("Student can not be null");
     }
 
     public StudentDTO updateStudent(Long id, Student newUser) {
-        if (studentRepository.existsById(id) && newUser != null){
-            Student user = studentRepository.findById(id).get();
+        if (newUser != null){
+            Student user = studentRepository.findById(id)
+                    .orElseThrow(() -> new UserNotFoundException(id));
 
             user.setEmail(newUser.getEmail());
             user.setLastName(newUser.getLastName());
